[package]
name = "monitor_fastdeploy"
version = "0.1.0"
authors = ["requestzxxx836@protonmail.ch <requestzxxx836@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full", "macros"] }

hyper = "0.13"
hyper-tls = "0.4"

dotenv = "0.15"
pretty_env_logger = "0.4"
log = "0.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.9.0-rc.1"}

